--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.cocacoding</groupId>
   <artifactId>smda-reader</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
+  <version>0.4.0-SNAPSHOT</version>
   
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -25,6 +25,13 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
+    </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.checkerframework/checker-qual -->
+    <dependency>
+      <groupId>org.checkerframework</groupId>
+      <artifactId>checker-qual</artifactId>
+      <version>3.4.0</version>
     </dependency>
     
   </dependencies>
